--- a/notebooks/tutorial_multiworker.ipynb
+++ b/notebooks/tutorial_multiworker.ipynb
@@ -25,7 +25,23 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n"
+     ]
+    }
+   ],
    "source": [
     "import tiledbsoma as soma\n",
     "import torch\n",
@@ -125,29 +141,10 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
+     "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1: Train Loss: 0.0169229 Accuracy 0.3124\n",
-      "Epoch 2: Train Loss: 0.0148674 Accuracy 0.4272\n",
-      "Epoch 3: Train Loss: 0.0144468 Accuracy 0.4509\n",
-      "Epoch 4: Train Loss: 0.0141778 Accuracy 0.4999\n",
-      "Epoch 5: Train Loss: 0.0139660 Accuracy 0.5619\n",
-      "Epoch 6: Train Loss: 0.0137670 Accuracy 0.6971\n",
-      "Epoch 7: Train Loss: 0.0136089 Accuracy 0.8670\n",
-      "Epoch 8: Train Loss: 0.0135203 Accuracy 0.9099\n",
-      "Epoch 9: Train Loss: 0.0134427 Accuracy 0.9262\n",
-      "Epoch 10: Train Loss: 0.0133607 Accuracy 0.9300\n",
-      "Epoch 11: Train Loss: 0.0133110 Accuracy 0.9348\n",
-      "Epoch 12: Train Loss: 0.0132749 Accuracy 0.9378\n",
-      "Epoch 13: Train Loss: 0.0132431 Accuracy 0.9413\n",
-      "Epoch 14: Train Loss: 0.0132194 Accuracy 0.9444\n",
-      "Epoch 15: Train Loss: 0.0131942 Accuracy 0.9465\n",
-      "Epoch 16: Train Loss: 0.0131739 Accuracy 0.9499\n",
-      "Epoch 17: Train Loss: 0.0131527 Accuracy 0.9526\n",
-      "Epoch 18: Train Loss: 0.0131369 Accuracy 0.9551\n",
-      "Epoch 19: Train Loss: 0.0131214 Accuracy 0.9563\n",
-      "Epoch 20: Train Loss: 0.0131061 Accuracy 0.9578\n"
+      "switching torch multiprocessing start method from \"fork\" to \"spawn\"\n"
      ]
     }
    ],
@@ -164,13 +161,73 @@
     "loss_fn = torch.nn.CrossEntropyLoss()\n",
     "optimizer = torch.optim.Adam(model.parameters(), lr=1e-05)\n",
     "\n",
-    "\n",
     "# define a two-worker data loader. The dataset is shuffled, so call `set_epoch` to ensure\n",
     "# that a different shuffle is applied on each epoch.\n",
     "experiment_dataloader = soma_ml.experiment_dataloader(\n",
     "    experiment_dataset, num_workers=2, persistent_workers=True\n",
-    ")\n",
-    "\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n",
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss: 0.0163469 Accuracy 0.3040\n",
+      "Epoch 2: Train Loss: 0.0147538 Accuracy 0.4680\n",
+      "Epoch 3: Train Loss: 0.0143231 Accuracy 0.5575\n",
+      "Epoch 4: Train Loss: 0.0140254 Accuracy 0.6792\n",
+      "Epoch 5: Train Loss: 0.0138131 Accuracy 0.7943\n",
+      "Epoch 6: Train Loss: 0.0136806 Accuracy 0.8565\n",
+      "Epoch 7: Train Loss: 0.0135832 Accuracy 0.8925\n",
+      "Epoch 8: Train Loss: 0.0134801 Accuracy 0.9130\n",
+      "Epoch 9: Train Loss: 0.0134058 Accuracy 0.9217\n",
+      "Epoch 10: Train Loss: 0.0133559 Accuracy 0.9272\n",
+      "Epoch 11: Train Loss: 0.0133088 Accuracy 0.9336\n",
+      "Epoch 12: Train Loss: 0.0132692 Accuracy 0.9406\n",
+      "Epoch 13: Train Loss: 0.0132350 Accuracy 0.9451\n",
+      "Epoch 14: Train Loss: 0.0132063 Accuracy 0.9495\n",
+      "Epoch 15: Train Loss: 0.0131819 Accuracy 0.9535\n",
+      "Epoch 16: Train Loss: 0.0131599 Accuracy 0.9556\n",
+      "Epoch 17: Train Loss: 0.0131419 Accuracy 0.9585\n",
+      "Epoch 18: Train Loss: 0.0131233 Accuracy 0.9605\n",
+      "Epoch 19: Train Loss: 0.0131053 Accuracy 0.9625\n",
+      "Epoch 20: Train Loss: 0.0130904 Accuracy 0.9638\n",
+      "CPU times: user 1min 13s, sys: 1min 11s, total: 2min 25s\n",
+      "Wall time: 5min 47s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
     "for epoch in range(20):\n",
     "    experiment_dataset.set_epoch(epoch)\n",
     "    train_loss, train_accuracy = train_epoch(\n",
@@ -184,7 +241,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "toymodel",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -198,9 +255,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
