--- a/notebooks/tutorial_lightning.ipynb
+++ b/notebooks/tutorial_lightning.ipynb
@@ -157,6 +157,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Trainer will use only 1 of 4 GPUs because it is running inside an interactive / notebook environment. You may try to set `Trainer(devices=4)` but please note that multi-GPU inside interactive / notebook environments is considered experimental and unstable. Your mileage may vary.\n",
       "GPU available: True (cuda), used: True\n",
       "TPU available: False, using: 0 TPU cores\n",
       "HPU available: False, using: 0 HPUs\n",
@@ -194,7 +195,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0]\n",
+      "LOCAL_RANK: 0 - CUDA_VISIBLE_DEVICES: [0,1,2,3]\n",
       "\n",
       "  | Name    | Type             | Params | Mode \n",
       "-----------------------------------------------------\n",
@@ -207,14 +208,14 @@
       "2.905     Total estimated model params size (MB)\n",
       "2         Modules in train mode\n",
       "0         Modules in eval mode\n",
-      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:424: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=31` in the `DataLoader` to improve performance.\n",
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/pytorch_lightning/trainer/connectors/data_connector.py:424: The 'train_dataloader' does not have many workers which may be a bottleneck. Consider increasing the value of the `num_workers` argument` to `num_workers=47` in the `DataLoader` to improve performance.\n",
       "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/pytorch_lightning/utilities/data.py:122: Your `IterableDataset` has `__len__` defined. In combination with multi-process data loading (when num_workers > 1), `__len__` could be inaccurate if each worker is not configured independently to avoid having duplicate data.\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e683704a9589425c8bc50caeb3e1edda",
+       "model_id": "877626ed6cdb4f10ac10f58eacae2041",
        "version_major": 2,
        "version_minor": 0
       },
@@ -236,8 +237,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 3min 39s, sys: 1min 26s, total: 5min 6s\n",
-      "Wall time: 2min 19s\n"
+      "CPU times: user 3min 45s, sys: 1min 49s, total: 5min 35s\n",
+      "Wall time: 2min 13s\n"
      ]
     }
    ],
