--- a/notebooks/tutorial_multiworker.ipynb
+++ b/notebooks/tutorial_multiworker.ipynb
@@ -164,7 +164,7 @@
     "# define a two-worker data loader. The dataset is shuffled, so call `set_epoch` to ensure\n",
     "# that a different shuffle is applied on each epoch.\n",
     "experiment_dataloader = soma_ml.experiment_dataloader(\n",
-    "    experiment_dataset, num_workers=2, persistent_workers=True\n",
+    "    experiment_dataset, num_workers=4, persistent_workers=True\n",
     ")"
    ]
   },
@@ -194,6 +194,24 @@
       "to learn more and leave feedback.\n",
       "################################################################################\n",
       "\n",
+      "  deprecation_warning()\n",
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n",
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
       "  deprecation_warning()\n"
      ]
     },
@@ -201,28 +219,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1: Train Loss: 0.0163469 Accuracy 0.3040\n",
-      "Epoch 2: Train Loss: 0.0147538 Accuracy 0.4680\n",
-      "Epoch 3: Train Loss: 0.0143231 Accuracy 0.5575\n",
-      "Epoch 4: Train Loss: 0.0140254 Accuracy 0.6792\n",
-      "Epoch 5: Train Loss: 0.0138131 Accuracy 0.7943\n",
-      "Epoch 6: Train Loss: 0.0136806 Accuracy 0.8565\n",
-      "Epoch 7: Train Loss: 0.0135832 Accuracy 0.8925\n",
-      "Epoch 8: Train Loss: 0.0134801 Accuracy 0.9130\n",
-      "Epoch 9: Train Loss: 0.0134058 Accuracy 0.9217\n",
-      "Epoch 10: Train Loss: 0.0133559 Accuracy 0.9272\n",
-      "Epoch 11: Train Loss: 0.0133088 Accuracy 0.9336\n",
-      "Epoch 12: Train Loss: 0.0132692 Accuracy 0.9406\n",
-      "Epoch 13: Train Loss: 0.0132350 Accuracy 0.9451\n",
-      "Epoch 14: Train Loss: 0.0132063 Accuracy 0.9495\n",
-      "Epoch 15: Train Loss: 0.0131819 Accuracy 0.9535\n",
-      "Epoch 16: Train Loss: 0.0131599 Accuracy 0.9556\n",
-      "Epoch 17: Train Loss: 0.0131419 Accuracy 0.9585\n",
-      "Epoch 18: Train Loss: 0.0131233 Accuracy 0.9605\n",
-      "Epoch 19: Train Loss: 0.0131053 Accuracy 0.9625\n",
-      "Epoch 20: Train Loss: 0.0130904 Accuracy 0.9638\n",
-      "CPU times: user 1min 13s, sys: 1min 11s, total: 2min 25s\n",
-      "Wall time: 5min 47s\n"
+      "Epoch 1: Train Loss: 0.0155349 Accuracy 0.4245\n",
+      "Epoch 2: Train Loss: 0.0143545 Accuracy 0.5850\n",
+      "Epoch 3: Train Loss: 0.0140397 Accuracy 0.7640\n",
+      "Epoch 4: Train Loss: 0.0138422 Accuracy 0.8402\n",
+      "Epoch 5: Train Loss: 0.0137058 Accuracy 0.8665\n",
+      "Epoch 6: Train Loss: 0.0136130 Accuracy 0.8812\n",
+      "Epoch 7: Train Loss: 0.0135430 Accuracy 0.8972\n",
+      "Epoch 8: Train Loss: 0.0134806 Accuracy 0.9100\n",
+      "Epoch 9: Train Loss: 0.0134058 Accuracy 0.9218\n",
+      "Epoch 10: Train Loss: 0.0133127 Accuracy 0.9389\n",
+      "Epoch 11: Train Loss: 0.0132463 Accuracy 0.9481\n",
+      "Epoch 12: Train Loss: 0.0132097 Accuracy 0.9507\n",
+      "Epoch 13: Train Loss: 0.0131815 Accuracy 0.9545\n",
+      "Epoch 14: Train Loss: 0.0131582 Accuracy 0.9568\n",
+      "Epoch 15: Train Loss: 0.0131387 Accuracy 0.9594\n",
+      "Epoch 16: Train Loss: 0.0131151 Accuracy 0.9615\n",
+      "Epoch 17: Train Loss: 0.0130982 Accuracy 0.9635\n",
+      "Epoch 18: Train Loss: 0.0130821 Accuracy 0.9656\n",
+      "Epoch 19: Train Loss: 0.0130688 Accuracy 0.9671\n",
+      "Epoch 20: Train Loss: 0.0130556 Accuracy 0.9679\n",
+      "CPU times: user 1min 11s, sys: 1min 6s, total: 2min 18s\n",
+      "Wall time: 5min 37s\n"
      ]
     }
    ],
