benchmark: rm train/test split

--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -96,21 +96,6 @@
    },
    "outputs": [],
    "source": [
-    "train_dataset, test_dataset = experiment_dataset.random_split(weights={\"train\": train_split, \"test\": 1 - train_split}, seed=split_seed)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
     "# PyTorch\n",
     "class LogisticRegression(torch.nn.Module):\n",
     "    def __init__(self, input_dim, output_dim):\n",
@@ -231,8 +216,8 @@
     "input_dim = experiment_dataset.shape[1]\n",
     "output_dim = len(cell_type_encoder.classes_)\n",
     "\n",
-    "kwargs = dict(num_workers=workers, persistent_workers=True) if isinstance(workers, int) else {}\n",
-    "train_dataloader = soma_ml.experiment_dataloader(train_dataset, **kwargs)\n",
+    "dl_kwargs = dict(num_workers=workers, persistent_workers=True) if isinstance(workers, int) else {}\n",
+    "train_dataloader = soma_ml.experiment_dataloader(experiment_dataset, **dl_kwargs)\n",
     "\n",
     "if workers == \"lightning\":    \n",
     "    model = LogisticRegressionLightning(input_dim, output_dim, cell_type_encoder=cell_type_encoder)\n",
@@ -279,7 +264,8 @@
    },
    "outputs": [],
    "source": [
-    "test_dataloader = soma_ml.experiment_dataloader(test_dataset)\n",
+    "# TODO: split train/test\n",
+    "test_dataloader = soma_ml.experiment_dataloader(experiment_dataset, **dl_kwargs)\n",
     "X_batch, y_batch = next(iter(test_dataloader))\n",
     "X_batch = torch.from_numpy(X_batch)\n",
     "y_batch = torch.from_numpy(cell_type_encoder.transform(y_batch['cell_type']))"
