--- a/notebooks/pytorch-tongue.ipynb
+++ b/notebooks/pytorch-tongue.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -27,8 +27,7 @@
    },
    "outputs": [],
    "source": [
-    "workers = None\n",
-    "lightning = False       # Use PyTorch Lightning\n",
+    "workers = None          # \"lightning\", or an integer for multi-worker config\n",
     "tissue = \"tongue\"       # \"tissue_general\" obs filter\n",
     "is_primary_data = True  # Additional obs filter\n",
     "census_version = \"2024-07-01\"\n",
@@ -42,7 +41,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {
+    "tags": [
+     "injected-parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "tissue = \"tongue\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -50,7 +63,23 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/ubuntu/.pyenv/versions/3.12.7/lib/python3.12/site-packages/torchdata/datapipes/__init__.py:18: UserWarning: \n",
+      "################################################################################\n",
+      "WARNING!\n",
+      "The 'datapipes', 'dataloader2' modules are deprecated and will be removed in a\n",
+      "future torchdata release! Please see https://github.com/pytorch/data/issues/1196\n",
+      "to learn more and leave feedback.\n",
+      "################################################################################\n",
+      "\n",
+      "  deprecation_warning()\n"
+     ]
+    }
+   ],
    "source": [
     "import tiledbsoma as soma\n",
     "import torch\n",
@@ -68,7 +97,7 @@
     "if is_primary_data:\n",
     "    obs_value_filter += \" and is_primary_data == True\"\n",
     "\n",
-    "iter_cls = soma_ml.ExperimentAxisQueryIterDataPipe if workers is None and not lightning else soma_ml.ExperimentAxisQueryIterableDataset\n",
+    "iter_cls = soma_ml.ExperimentAxisQueryIterDataPipe if workers is None else soma_ml.ExperimentAxisQueryIterableDataset\n",
     "\n",
     "with experiment.axis_query(\n",
     "    measurement_name=\"RNA\", obs_query=soma.AxisQuery(value_filter=obs_value_filter)\n",
@@ -87,7 +116,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "train_dataset, test_dataset = experiment_dataset.random_split(weights={\"train\": train_split, \"test\": 1 - train_split}, seed=split_seed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -143,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -203,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -217,12 +261,12 @@
     "input_dim = experiment_dataset.shape[1]\n",
     "output_dim = len(cell_type_encoder.classes_)\n",
     "\n",
-    "dl_kwargs = {} if lightning or workers is None else dict(num_workers=workers, persistent_workers=True)\n",
-    "train_dataloader = soma_ml.experiment_dataloader(experiment_dataset, **dl_kwargs)\n",
+    "kwargs = dict(num_workers=workers, persistent_workers=True) if isinstance(workers, int) else {}\n",
+    "train_dataloader = soma_ml.experiment_dataloader(train_dataset, **kwargs)\n",
     "\n",
-    "if lightning:\n",
+    "if workers == \"lightning\":    \n",
     "    model = LogisticRegressionLightning(input_dim, output_dim, cell_type_encoder=cell_type_encoder)\n",
-    "    trainer = pl.Trainer(max_epochs=n_epochs, devices=list(range(workers or 1)))\n",
+    "    trainer = pl.Trainer(max_epochs=n_epochs)\n",
     "    torch.set_float32_matmul_precision(\"high\")\n",
     "else:\n",
     "    model = LogisticRegression(input_dim, output_dim).to(device)\n",
@@ -232,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -240,10 +284,19 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1: Train Loss: 0.0166966 Accuracy 0.3559\n",
+      "Epoch 2: Train Loss: 0.0147262 Accuracy 0.4564\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
-    "if lightning:\n",
+    "if workers == \"lighting\":\n",
     "    trainer.fit(model, train_dataloaders=train_dataloader)\n",
     "else:\n",
     "    for epoch in range(n_epochs):\n",
@@ -255,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -265,8 +318,7 @@
    },
    "outputs": [],
    "source": [
-    "# TODO: split train/test\n",
-    "test_dataloader = soma_ml.experiment_dataloader(experiment_dataset, **dl_kwargs)\n",
+    "test_dataloader = soma_ml.experiment_dataloader(test_dataset)\n",
     "X_batch, y_batch = next(iter(test_dataloader))\n",
     "X_batch = torch.from_numpy(X_batch)\n",
     "y_batch = torch.from_numpy(cell_type_encoder.transform(y_batch['cell_type']))"
@@ -274,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "editable": true,
     "slideshow": {
@@ -282,7 +334,158 @@
     },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 92.2% (118 correct, 10 incorrect)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>predicted cell type</th>\n",
+       "      <th>basal cell</th>\n",
+       "      <th>epithelial cell</th>\n",
+       "      <th>fibroblast</th>\n",
+       "      <th>keratinocyte</th>\n",
+       "      <th>leukocyte</th>\n",
+       "      <th>vein endothelial cell</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>actual cell type</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>basal cell</th>\n",
+       "      <td>48</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>capillary endothelial cell</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>epithelial cell</th>\n",
+       "      <td></td>\n",
+       "      <td>22</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>fibroblast</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>keratinocyte</th>\n",
+       "      <td>5</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>27</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>leukocyte</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>19</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>tongue muscle cell</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>vein endothelial cell</th>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "predicted cell type        basal cell epithelial cell fibroblast keratinocyte  \\\n",
+       "actual cell type                                                                \n",
+       "basal cell                         48                                       3   \n",
+       "capillary endothelial cell                                                      \n",
+       "epithelial cell                                    22                           \n",
+       "fibroblast                                                     1                \n",
+       "keratinocyte                        5                                      27   \n",
+       "leukocyte                                                                       \n",
+       "tongue muscle cell                                                              \n",
+       "vein endothelial cell                                                           \n",
+       "\n",
+       "predicted cell type        leukocyte vein endothelial cell  \n",
+       "actual cell type                                            \n",
+       "basal cell                                                  \n",
+       "capillary endothelial cell                               1  \n",
+       "epithelial cell                                             \n",
+       "fibroblast                                                  \n",
+       "keratinocyte                                                \n",
+       "leukocyte                         19                        \n",
+       "tongue muscle cell                 1                        \n",
+       "vein endothelial cell                                    1  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "\n",
@@ -323,5 +526,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 5
 }
