--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -31,6 +31,7 @@
     "lightning = False       # Use PyTorch Lightning\n",
     "tissue = \"tongue\"       # \"tissue_general\" obs filter\n",
     "is_primary_data = True  # Additional obs filter\n",
+    "cpu = False             # Force CPU mode\n",
     "census_version = \"2024-07-01\"\n",
     "batch_size = 128\n",
     "shuffle = True\n",
@@ -213,7 +214,11 @@
    },
    "outputs": [],
    "source": [
-    "device = torch.device(\"cuda\") if torch.cuda.is_available() else torch.device(\"cpu\")\n",
+    "if cpu or not torch.cuda.is_available():\n",
+    "    device = \"cpu\"\n",
+    "else:\n",
+    "    device = \"cuda\"\n",
+    "device = torch.device(device)\n",
     "input_dim = experiment_dataset.shape[1]\n",
     "output_dim = len(cell_type_encoder.classes_)\n",
     "\n",
@@ -222,7 +227,13 @@
     "\n",
     "if lightning:\n",
     "    model = LogisticRegressionLightning(input_dim, output_dim, cell_type_encoder=cell_type_encoder)\n",
-    "    trainer = pl.Trainer(max_epochs=n_epochs, devices=list(range(workers or 1)))\n",
+    "    trainer = pl.Trainer(\n",
+    "        max_epochs=n_epochs,\n",
+    "        **(\n",
+    "            dict(accelerator=\"cpu\") if cpu else\n",
+    "            dict(devices=list(range(workers or 1)))\n",
+    "        ),\n",
+    "    )\n",
     "    torch.set_float32_matmul_precision(\"high\")\n",
     "else:\n",
     "    model = LogisticRegression(input_dim, output_dim).to(device)\n",
