handle lightning+papermill, print cell/batch counts

--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -36,9 +36,22 @@
     "batch_size = 128\n",
     "shuffle = True\n",
     "learning_rate = 1e-5\n",
-    "n_epochs = 20\n",
-    "train_split = 0.8\n",
-    "split_seed = 1"
+    "n_epochs = 20"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def is_running_in_papermill():\n",
+    "    import sys\n",
+    "    return 'pm_config' in sys.modules or 'pm_config' in globals()\n",
+    "\n",
+    "is_papermill = is_running_in_papermill()\n",
+    "if is_papermill:\n",
+    "    print(\"Detected papermill run\")"
    ]
   },
   {
@@ -83,7 +96,9 @@
     "        obs_column_names=[\"cell_type\"],\n",
     "        batch_size=batch_size,\n",
     "        shuffle=shuffle,\n",
-    "    )"
+    "    )\n",
+    "\n",
+    "print(f'{len(obs_df)} cells, {len(experiment_dataset)} batches')"
    ]
   },
   {
@@ -222,17 +237,20 @@
     "input_dim = experiment_dataset.shape[1]\n",
     "output_dim = len(cell_type_encoder.classes_)\n",
     "\n",
-    "dl_kwargs = {} if lightning or workers is None else dict(num_workers=workers, persistent_workers=True)\n",
+    "dl_kwargs = {} if workers is None else dict(num_workers=workers, persistent_workers=True)\n",
     "train_dataloader = soma_ml.experiment_dataloader(experiment_dataset, **dl_kwargs)\n",
     "\n",
     "if lightning:\n",
     "    model = LogisticRegressionLightning(input_dim, output_dim, cell_type_encoder=cell_type_encoder)\n",
     "    trainer = pl.Trainer(\n",
     "        max_epochs=n_epochs,\n",
-    "        **(\n",
-    "            dict(accelerator=\"cpu\") if cpu else\n",
-    "            dict(devices=list(range(workers or 1)))\n",
-    "        ),\n",
+    "        strategy=\"auto\" if cpu else \"ddp_notebook\",\n",
+    "        accelerator=\"cpu\" if cpu else \"gpu\",\n",
+    "        devices=1 if cpu else workers or 1,\n",
+    "        sync_batchnorm=True if not cpu and workers and workers > 1 else False,\n",
+    "        deterministic=True,\n",
+    "        max_time=None,\n",
+    "        enable_progress_bar=not is_papermill,\n",
     "    )\n",
     "    torch.set_float32_matmul_precision(\"high\")\n",
     "else:\n",
