infer papermill from env var

--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -45,13 +45,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def is_running_in_papermill():\n",
-    "    import sys\n",
-    "    return 'pm_config' in sys.modules or 'pm_config' in globals()\n",
-    "\n",
-    "is_papermill = is_running_in_papermill()\n",
-    "if is_papermill:\n",
-    "    print(\"Detected papermill run\")"
+    "from os import environ as env\n",
+    "is_papermill = bool(env.get(\"PAPERMILL\"))"
    ]
   },
   {
