--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -36,17 +36,8 @@
     "batch_size = 128\n",
     "shuffle = True\n",
     "learning_rate = 1e-5\n",
-    "n_epochs = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from os import environ as env\n",
-    "is_papermill = bool(env.get(\"PAPERMILL\"))"
+    "n_epochs = 20\n",
+    "is_papermill = False    # Papermill invocations should set this to True; `tdbsml benchmark` does this automatically"
    ]
   },
   {
