nn.DataParallel attempt

--- a/notebooks/benchmark.ipynb
+++ b/notebooks/benchmark.ipynb
@@ -241,6 +241,13 @@
     "    torch.set_float32_matmul_precision(\"high\")\n",
     "else:\n",
     "    model = LogisticRegression(input_dim, output_dim).to(device)\n",
+    "    if workers > 1:\n",
+    "        gpus = torch.cuda.device_count()\n",
+    "        if gpus < workers:\n",
+    "            raise ValueError(f\"Requested {workers=} but only found {gpus=}\")\n",
+    "        import torch.nn as nn\n",
+    "        model = nn.DataParallel(model, device_ids=list(range(workers)))\n",
+    "        print(f\"Parallelizing model with {workers=}\")\n",
     "    loss_fn = torch.nn.CrossEntropyLoss()\n",
     "    optimizer = torch.optim.Adam(model.parameters(), lr=learning_rate)"
    ]
