--- a/notebooks/tutorial_pytorch.ipynb
+++ b/notebooks/tutorial_pytorch.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "    experiment_dataset = soma_ml.ExperimentAxisQueryIterDataPipe(\n",
     "        query,\n",
-    "        X_name=\"raw\",\n",
+    "        layer_name=\"raw\",\n",
     "        obs_column_names=[\"cell_type\"],\n",
     "        batch_size=128,\n",
     "        shuffle=True,\n",
