rename: `Experiment{AxisQueryIterable,}Dataset`

--- a/notebooks/tutorial_lightning.ipynb
+++ b/notebooks/tutorial_lightning.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Training a model with PyTorch Lightning\n",
     "\n",
-    "This tutorial demonstrates training a toy model with [PyTorch Lightning], using the `tiledbsoma_ml.ExperimentAxisQueryIterableDataset` class, on data from the [CZI CELLxGENE Census](https://chanzuckerberg.github.io/cellxgene-census/). It is intended for demonstration purposes only, not as an example of how to train a biologically useful model.\n",
+    "This tutorial demonstrates training a toy model with [PyTorch Lightning], using the `tiledbsoma_ml.ExperimentDataset` class, on data from the [CZI CELLxGENE Census](https://chanzuckerberg.github.io/cellxgene-census/). It is intended for demonstration purposes only, not as an example of how to train a biologically useful model.\n",
     "\n",
     "For more information on these APIs, please refer to the [`tutorial_pytorch` notebook](tutorial_pytorch.ipynb).\n",
     "\n",
@@ -58,7 +58,7 @@
     "    obs_df = query.obs(column_names=[\"cell_type\"]).concat().to_pandas()\n",
     "    cell_type_encoder = LabelEncoder().fit(obs_df[\"cell_type\"].unique())\n",
     "\n",
-    "    experiment_dataset = soma_ml.ExperimentAxisQueryIterableDataset(\n",
+    "    experiment_dataset = soma_ml.ExperimentDataset(\n",
     "        query,\n",
     "        X_name=\"raw\",\n",
     "        obs_column_names=[\"cell_type\"],\n",
