more renames: `Experiment{AxisQueryIterable,}Dataset`

--- a/notebooks/tutorial_multiworker.ipynb
+++ b/notebooks/tutorial_multiworker.ipynb
@@ -22,10 +22,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "import tiledbsoma as soma\n",
     "import torch\n",
@@ -47,7 +47,7 @@
     "    obs_df = query.obs(column_names=[\"cell_type\"]).concat().to_pandas()\n",
     "    cell_type_encoder = LabelEncoder().fit(obs_df[\"cell_type\"].unique())\n",
     "\n",
-    "    experiment_dataset = soma_ml.ExperimentAxisQueryIterableDataset(\n",
+    "    experiment_dataset = soma_ml.ExperimentDataset(\n",
     "        query,\n",
     "        layer_name=\"raw\",\n",
     "        obs_column_names=[\"cell_type\"],\n",
@@ -58,10 +58,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
    "metadata": {},
+   "cell_type": "code",
    "outputs": [],
+   "execution_count": null,
    "source": [
     "class LogisticRegression(torch.nn.Module):\n",
     "    def __init__(self, input_dim, output_dim):\n",
