--- a/notebooks/tutorial_lightning.ipynb
+++ b/notebooks/tutorial_lightning.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "    experiment_dataset = soma_ml.ExperimentDataset(\n",
     "        query,\n",
-    "        X_name=\"raw\",\n",
+    "        layer_name=\"raw\",\n",
     "        obs_column_names=[\"cell_type\"],\n",
     "        batch_size=128,\n",
     "        shuffle=True,\n",
